# roon-knob

./: .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  COMMERCIAL-LICENSE.md  GEMINI.md  HANDSHAKE_FAILURE_LESSONS.md  LICENSE  LICENSE-MIT  README.md  RELEASE_NOTES_v1.3.0.md  TESTING_BT_MODES.md  flash.html  index.html  rk_pc_store.json
.ba/: config.json
.github/: RELEASE_TEMPLATE.md  release-drafter.yml
.github/workflows/: changelog.yml  ci.yml  docker.yml  release-drafter.yml  release.yml
common/: app_main.c  bridge_client.c  bridge_client.h  controller_mode.c  controller_mode.h  display_config.c  display_config.h  manifest_parse.c  manifest_parse.h  manifest_ui.c  manifest_ui.h  rk_cfg.h  roon_client.c  roon_client.h  ui.c  ui.h  ui_jpeg.c  ui_jpeg.h
common/platform/: platform_display.h  platform_http.h  platform_input.h  platform_mdns.h  platform_power.h  platform_wifi.h
docs/: BLE_HID.md  BOOT_SEQUENCE.md  BRIDGE_DRAFT_SPEC.md  DEVELOPMENT.md  DISPLAY.md  FONTS.md  IMPLEMENTATION_NOTES.md  KCONFIG.md  NVS_STORAGE.md  OTA_UPDATES.md  PORTING.md  README.md  ROADMAP_IDEAS.md  ROTARY_ENCODER.md  TOUCH_INPUT.md  WIFI_PROVISIONING.md
docs/decision_records/: DECISION_JSON_PARSING.md  DECISION_ROTATION.md  DESIGN_KNOB_CONFIG.md
docs/dev/: DEVELOPMENT.md  FREERTOS_PATTERNS.md  IMPLEMENTATION_NOTES.md  KCONFIG.md  NVS_STORAGE.md
docs/esp/: BATTERY_MONITORING.md  BLE_HID.md  DISPLAY.md  DUAL_CHIP_ARCHITECTURE.md  FONTS.md  NETWORK_IDENTITY.md  SWIPE_GESTURES.md  TOUCH_INPUT.md
docs/howto/: PORTING.md
docs/meta/: PROJECT_AIMS.md  ROADMAP_IDEAS.md
docs/references/: COLORTEST_HELLOWORLD.md  ESP_HTTP_CLIENT.md  README.md  blueknob-analysis.md  smart-knob-analysis.md
docs/scripts/: CODE_REVIEW_FINDINGS.md  README.md  TEST_BLUETOOTH_MODE.md  TEST_WIFI_ROON_MODE.md
docs/usage/: DUAL_CHIP_ARCHITECTURE.md  FIRMWARE_FLASHING.md  GETTING_STARTED.md  OTA_UPDATES.md  WIFI_PROVISIONING.md
esp32_bt/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32_bt/docs/: AVRCP_CONTROLLER_ONLY.md
esp32_bt/main/: CMakeLists.txt  Kconfig.projbuild  ble_hid_vol.c  ble_hid_vol.h  bt_avrcp.c  bt_avrcp.h  idf_component.yml  main.c  ota_update.c  ota_update.h  uart_protocol.c  uart_protocol.cpp  uart_protocol.h
esp_dial/: .gitignore  Kconfig.projbuild  partitions.csv  sdkconfig.defaults.ble  sdkconfig.override
esp_dial/main/: Kconfig.projbuild  battery.h  config_server.c  config_server.h  cst816.c.old  font_manager.c  font_manager.h  idf_component.yml  main_idf.c  ota_update.c  ota_update.h  platform_display_idf.c  platform_http_idf.c  platform_input_idf.c  platform_log_idf.c  platform_mdns_idf.c  platform_storage_idf.c  ui_network.h  wifi_manager.h
esp_dial/scripts/: generate_fonts.sh
frame_app/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
frame_app/main/: CMakeLists.txt  Kconfig.projbuild  ble_remote.c  ble_remote.h  captive_portal.c  captive_portal.h  dns_server.c  dns_server.h  eink_display.c  eink_display.h  eink_dither.c  eink_dither.h  eink_font.c  eink_font.h  eink_ui.c  eink_ui.h  idf_component.yml  main_frame.c  platform_display_frame.c  platform_http_frame.c  platform_input_frame.c  platform_log_frame.c  platform_mdns_frame.c  platform_storage_frame.c  platform_wifi_frame.c  pmic_axp2101.c  pmic_axp2101.h  wifi_manager.c  wifi_manager.h
history/: issues.jsonl
idf_app/: CMakeLists.txt  dhcp.pcap  partitions.csv  sdkconfig.defaults  sdkconfig.override
idf_app/main/: CMakeLists.txt  Kconfig.projbuild  battery.c  battery_test.c  ble_hid_client.c  captive_portal.c  config_server.c  config_store.c  config_store.h  cst816.h.old  display_sleep.c  display_sleep.h  dns_server.c  esp32_comm.c  esp32_comm.cpp  esp32_comm.h  font_manager.c  font_manager.h  idf_component.yml  main.c  main_idf.c  mdns_client.c  mdns_client.h  net_client_idf.c  ota_update.c  ota_update.h  platform_display_idf.c  platform_display_idf.h  platform_http_idf.c  platform_input_idf.c  platform_mdns_idf.c  platform_power_idf.c  platform_storage_idf.c  ui_network.c  wifi_manager.c  wifi_manager.h
idf_app/main/fonts/: charis_22.c  charis_28.c  charis_40.c  lato_22.c  lato_25.c  lato_28.c  material_icons_22.c  material_icons_25.c  material_icons_28.c  material_icons_44.c  material_icons_48.c  material_icons_60.c  notosans_22.c  notosans_25.c  notosans_28.c
idf_app/scripts/: generate_fonts.sh
include/: http_client.h  os_thread.h
pc_sim/: CMakeLists.txt  lv_conf.h  main.c  main_pc.c  platform_input_pc.c  platform_power_pc.c  platform_storage_pc.c  ui.c  ui.h
pr/100/: flash.html  manifest-s3.json
pr/111/: flash.html  manifest-s3.json
pr/113/: flash.html  manifest-s3.json
pr/118/: flash.html  manifest-s3.json
pr/119/: flash.html  manifest-s3.json
pr/123/: flash.html  manifest-s3.json
pr/125/: flash.html  manifest-s3.json
pr/126/: flash.html  manifest-s3.json
pr/133/: flash.html  manifest-s3.json
pr/134/: flash.html  manifest-s3.json
pr/135/: flash.html  manifest-s3.json
pr/136/: flash.html  manifest-s3.json
pr/139/: flash.html  manifest-s3.json
pr/140/: flash.html  manifest-s3.json
pr/141/: flash.html  manifest-s3.json
pr/142/: flash.html  manifest-s3.json
pr/143/: flash.html  manifest-s3.json
pr/144/: flash.html  manifest-s3.json
pr/145/: flash.html  manifest-s3.json
pr/146/: flash.html  manifest-s3.json
pr/147/: flash.html  manifest-s3.json
pr/149/: flash.html  manifest-s3.json
pr/151/: flash.html  manifest-s3.json
pr/153/: flash.html  manifest-s3.json
pr/155/: flash.html  manifest-s3.json
pr/177/: flash.html  manifest-s3.json
pr/180/: flash.html  manifest-s3.json
pr/182/: flash.html  (+1 more)
roon-extension/: .dockerignore  Dockerfile  README.md  bridge.js  docker-compose.yml  knobs.js  knobs.test.js  logger.js  mdns.js  metrics.js  package-lock.json  package.json  routes.js  server.js
scripts/: build_flash_idf.sh  ci_sanity.sh  install.sh  release_firmware.sh  run_pc.sh  setup_mac.sh  test_udp.py
squareline-ui/: BlueKnob.sll  BlueKnob.spj  BlueKnob_events.py  README.md
web/: flash-pr.html  flash.html  manifest-s3.json
(+61 files in other folders)
